; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/cp/extr_parser.c_cp_parser_omp_construct.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/cp/extr_parser.c_cp_parser_omp_construct.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.TYPE_11__*)* @cp_parser_omp_construct to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cp_parser_omp_construct(i32* %0, %struct.TYPE_11__* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_11__*, align 8
  %5 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store %struct.TYPE_11__* %1, %struct.TYPE_11__** %4, align 8
  %6 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %7 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  switch i32 %8, label %41 [
    i32 135, label %9
    i32 134, label %13
    i32 133, label %17
    i32 132, label %21
    i32 131, label %25
    i32 130, label %29
    i32 129, label %33
    i32 128, label %37
  ]

9:                                                ; preds = %2
  %10 = load i32*, i32** %3, align 8
  %11 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %12 = call i32 @cp_parser_omp_atomic(i32* %10, %struct.TYPE_11__* %11)
  br label %52

13:                                               ; preds = %2
  %14 = load i32*, i32** %3, align 8
  %15 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %16 = call i64 @cp_parser_omp_critical(i32* %14, %struct.TYPE_11__* %15)
  store i64 %16, i64* %5, align 8
  br label %43

17:                                               ; preds = %2
  %18 = load i32*, i32** %3, align 8
  %19 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %20 = call i64 @cp_parser_omp_for(i32* %18, %struct.TYPE_11__* %19)
  store i64 %20, i64* %5, align 8
  br label %43

21:                                               ; preds = %2
  %22 = load i32*, i32** %3, align 8
  %23 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %24 = call i64 @cp_parser_omp_master(i32* %22, %struct.TYPE_11__* %23)
  store i64 %24, i64* %5, align 8
  br label %43

25:                                               ; preds = %2
  %26 = load i32*, i32** %3, align 8
  %27 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %28 = call i64 @cp_parser_omp_ordered(i32* %26, %struct.TYPE_11__* %27)
  store i64 %28, i64* %5, align 8
  br label %43

29:                                               ; preds = %2
  %30 = load i32*, i32** %3, align 8
  %31 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %32 = call i64 @cp_parser_omp_parallel(i32* %30, %struct.TYPE_11__* %31)
  store i64 %32, i64* %5, align 8
  br label %43

33:                                               ; preds = %2
  %34 = load i32*, i32** %3, align 8
  %35 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %36 = call i64 @cp_parser_omp_sections(i32* %34, %struct.TYPE_11__* %35)
  store i64 %36, i64* %5, align 8
  br label %43

37:                                               ; preds = %2
  %38 = load i32*, i32** %3, align 8
  %39 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %40 = call i64 @cp_parser_omp_single(i32* %38, %struct.TYPE_11__* %39)
  store i64 %40, i64* %5, align 8
  br label %43

41:                                               ; preds = %2
  %42 = call i32 (...) @gcc_unreachable()
  br label %43

43:                                               ; preds = %41, %37, %33, %29, %25, %21, %17, %13
  %44 = load i64, i64* %5, align 8
  %45 = icmp ne i64 %44, 0
  br i1 %45, label %46, label %52

46:                                               ; preds = %43
  %47 = load i64, i64* %5, align 8
  %48 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %49 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %48, i32 0, i32 1
  %50 = load i32, i32* %49, align 4
  %51 = call i32 @SET_EXPR_LOCATION(i64 %47, i32 %50)
  br label %52

52:                                               ; preds = %9, %46, %43
  ret void
}

declare dso_local i32 @cp_parser_omp_atomic(i32*, %struct.TYPE_11__*) #1

declare dso_local i64 @cp_parser_omp_critical(i32*, %struct.TYPE_11__*) #1

declare dso_local i64 @cp_parser_omp_for(i32*, %struct.TYPE_11__*) #1

declare dso_local i64 @cp_parser_omp_master(i32*, %struct.TYPE_11__*) #1

declare dso_local i64 @cp_parser_omp_ordered(i32*, %struct.TYPE_11__*) #1

declare dso_local i64 @cp_parser_omp_parallel(i32*, %struct.TYPE_11__*) #1

declare dso_local i64 @cp_parser_omp_sections(i32*, %struct.TYPE_11__*) #1

declare dso_local i64 @cp_parser_omp_single(i32*, %struct.TYPE_11__*) #1

declare dso_local i32 @gcc_unreachable(...) #1

declare dso_local i32 @SET_EXPR_LOCATION(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
